--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="main">
       <div class="container">
-        <h1>Introducing Shutterbugg</h1>
+        <h1>Introducing Focusfly</h1>
         <p>Capture the moments that matter.</p>
         <a href="#">Download Shutterbugg</a>
       </div>
