--- a/index.html
+++ b/index.html
@@ -2,65 +2,68 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
+    <div class="header">
       <div class="container">
-        <h1>Introducing Focusfly</h1>
-        <p>Capture the moments that matter.</p>
-        <a href="#">Download Shutterbugg</a>
+        <div class='row'>
+          <img class='top-pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg'/>
+          <ul class='nav'>
+            <li><a href='#'>About</a></li>
+            <li><a href='#'>Blog</a></li>
+            <li><a href='#'>Help</a></li>
+            <li><a href='#'>Contact</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
-    <div class="section">
+    <div class="jumbotron">
       <div class="container">
-        <div class="row">
-	      	<div class="col-md-6"><img src="https://s3.amazonaws.com/codecademy-content/projects/shutterbugg/explore.png"/></div>
-	        <div class="col-md-6"><h1>Share</h1><p>Share your moments with the people who matter to you most. With Shutterbugg, it's easy to share with the right people.</p>
-          </div>
-	   	  </div>
-        <div class="row">
-          <div class="col-md-6"><img src="https://s3.amazonaws.com/codecademy-content/projects/shutterbugg/explore.png" /></div>
-          <div class="col-md-6"><h1>Explore</h1><p>Explore moments from your friends and family. Shutterbugg makes it easy to see what's happening in the world and take in everything around you.</p></div>
-      	</div>
-   	  </div>
-    </div>
-    
-    <div class="store section container">
-      <h2>Available for iPhone, iPad, and Android.</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/shutterbugg/app-store.png" width="185px" />
-      <img alt="Get it on Google Play" src="https://s3.amazonaws.com/codecademy-content/projects/shutterbugg/google-play.png" width="159px" />
+        <h1>Meet Junction</h1>
+      </div>
     </div>
 
-    <div class="footer">
+    <div class="supporting">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4"><h2>Company</h2>
-            <ul>
-              <li>Careers</li>
-              <li>Terms</li>
-              <li>Help</li>
-            </ul>
+        <div class='row'>
+          <div class='col-md-4'>
+            <div class='row'>
+           	  <img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg'>
+            </div>
+            <div class='row'>
+            	<h3>Read</h3>
+            	<p>Disover new stories and follow your favorite writers.</p>
+            </div>
           </div>
-          <div class="col-md-4">
-            <h2>Products</h2>
-            <ul>
-              <li>Shutterbugg</li>
-              <li>Speakerboxx</li>
-            </ul>
+          <div class='col-md-4'>
+            <div class='row'>
+            	<img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/write.svg'/>
+            </div>
+            <div class='row'>
+            	<h3>Write</h3>
+            	<p>Create Stories about our world, or entirely new worlds.</p>
+            </div>
           </div>
-	        <div class="col-md-4">
-            <h2>News</h2>
-            <ul>
-              <li>Blog</li>
-              <li>Twitter</li>
-              <li>YouTube</li>
-              <li>Google+</li>
-              <li>Facebook</li>
-            </ul>
+          <div class='col-md-4'>
+            <div class='row'>
+            	<img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/talk.svg'/>
+            </div>
+            <div class='row'>
+            	<h3>Talk</h3>
+            	<p>Join the conversation by talking with your favorite readers and your fans.</p>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class='footer'>
+      <div class='container'>
+      	<div class='btn'>
+      		<h5>Join</h5>
+      	</div>
       </div>
     </div>
   </body>
