--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class='row'>
           <img class='top-pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg'/>
           <ul class='nav'>
-            <li><a href='#'>About</a></li>
-            <li><a href='#'>Blog</a></li>
-            <li><a href='#'>Help</a></li>
-            <li><a href='#'>Contact</a></li>
+            <li><a href='#'>About Brandon</a></li>
+            <li><a href='#'>Blog about Brandon</a></li>
+            <li><a href='#'>Help Brandon</a></li>
+            <li><a href='#'>Contact Brandon</a></li>
           </ul>
         </div>
       </div>
@@ -22,7 +22,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Meet Junction</h1>
+        <h1>Meet Brandon</h1>
       </div>
     </div>
 
@@ -34,8 +34,8 @@
            	  <img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg'>
             </div>
             <div class='row'>
-            	<h3>Read</h3>
-            	<p>Disover new stories and follow your favorite writers.</p>
+            	<h3>Read about Brandon</h3>
+            	<p>Disover new stories and follow your favorite Brandon moments.</p>
             </div>
           </div>
           <div class='col-md-4'>
@@ -44,7 +44,7 @@
             </div>
             <div class='row'>
             	<h3>Write</h3>
-            	<p>Create Stories about our world, or entirely new worlds.</p>
+            	<p>Create Stories about our roommate Brandon, or entirely new stories about Brandon.</p>
             </div>
           </div>
           <div class='col-md-4'>
@@ -52,8 +52,8 @@
             	<img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/talk.svg'/>
             </div>
             <div class='row'>
-            	<h3>Talk</h3>
-            	<p>Join the conversation by talking with your favorite readers and your fans.</p>
+            	<h3>Talk to Brandon</h3>
+            	<p>Join the conversation by talking with Brandon and Brandon.</p>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
     <div class='footer'>
       <div class='container'>
       	<div class='btn'>
-      		<h5>Join</h5>
+      		<h5>Join the Club</h5>
       	</div>
       </div>
     </div>
