--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             	<img class='pic' src='https://s3.amazonaws.com/codecademy-content/projects/junction/write.svg'/>
             </div>
             <div class='row'>
-            	<h3>Write</h3>
+            	<h3>Write about Brandon</h3>
             	<p>Create Stories about our roommate Brandon, or entirely new stories about Brandon.</p>
             </div>
           </div>
@@ -53,7 +53,7 @@
             </div>
             <div class='row'>
             	<h3>Talk to Brandon</h3>
-            	<p>Join the conversation by talking with Brandon and Brandon.</p>
+            	<p>Join the conversation by talking with Brandon about Brandon.</p>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
     <div class='footer'>
       <div class='container'>
       	<div class='btn'>
-      		<h5>Join the Club</h5>
+      		<h5>Brandon the Brandon</h5>
       	</div>
       </div>
     </div>
