--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class='col-md-4'>
             <h2>Learn</h2>
-            <p>Read articles on feeding, training, grooming, Brandon. Our resources ensure that you are fully prepared as a new friend of Brandon.</p>
+            <p>Read articles on feeding and grooming, Brandon. Our resources ensure that you are fully prepared as a new friend of Brandon.</p>
             <a class='btn btn-default' href='#'><h3>GO</h3></a>
           </div>
           <div class='col-md-4'>
