--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           </div>
           <div class='col-md-4'>
             <h2>Learn</h2>
-            <p>Read articles on feeding and grooming, Brandon. Our resources ensure that you are fully prepared as a new friend of Brandon.</p>
+            <p>Read articles on feeding and grooming, your pet. Our resources ensure that you are fully prepared as a new friend.</p>
             <a class='btn btn-default' href='#'><h3>GO</h3></a>
           </div>
           <div class='col-md-4'>
             <h2>Help</h2>
-            <p>Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon Brandon</p>
+            <p>Get involved to help pets in need. You can make a difference through volunteering, social media, and donations.</p>
             <a class='btn btn-default' href='#'><h3>GO</h3></a>
           </div>
         </div>
