--- a/adventure_prank/index.html
+++ b/adventure_prank/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class='row'>
             	<h3>Read about Brandon</h3>
-            	<p>Disover new stories and follow your favorite Brandon moments.</p>
+            	<p>Disover new stories about Brandon and follow your favorite Brandon moments.</p>
             </div>
           </div>
           <div class='col-md-4'>
