--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="footer">
       <div class="container">
         <h4>This December.</h4>
-        <p>250 1st Avenue<br/>New York, NY<br/>(201) 956 - 3603</p>
+        <p>Stuytown<br/>New York, NY<br/>(201) 555 - 3603</p>
         <img src='https://s3.amazonaws.com/codecademy-content/projects/headlines/email.svg' />
         <img src='https://s3.amazonaws.com/codecademy-content/projects/headlines/fb.svg' />
         <img src='https://s3.amazonaws.com/codecademy-content/projects/headlines/twitter.svg' />
