--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="banner">
       <div class="container">
         <h3>The Bottom Line</h3>
-        <p>Be there to hang with Fax or be square.<br/>Or don't it's your call.</p>
+        <p>Be there to hang with Fax<br/>or don't.</p>
       </div>
     </div>
 
