--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2><span class='yellow'>Colfax is Coming to NYC.</span> Read articles, post your opinions, and see images, <span class='yellow'>all about Colfax</span> written from around the world.</h2>
+        <h2><span class='yellow'>Colfax is Coming to NYC.</span> Read articles, post your opinions, and see images, <span class='yellow'>all about Colfax</span> from around the world.</h2>
       </div>
     </div>
 
