--- a/bolt/index.html
+++ b/bolt/index.html
@@ -31,7 +31,7 @@
           <div class='form-group'>
             <input class='form-control browsing' type='text' placeholder='Browse the collection' id='browsing' size='50'>
         	</div>
-	        <button type='submit' class='btn'>Search</button>
+	        <button type='submit' class='btn btn1'>Search</button>
         </form>
       </div>
     </div>
@@ -84,15 +84,41 @@
 
     <div class="feature">
       <div class="container">
-        
+        <h2>Available everywhere</h2>
+        <p>Start watching on one device, and pick up where you left off on another device.</p>
       </div>
     </div>
 
     <div class="footer">
       <div class="container">
-        
+        <div class='row pull-left'>
+          <div class='col-md-4'>
+            <ul class='dist'>
+              <lh>Bolt</lh>
+              <li>Careers</li>
+              <li>Terms</li>
+              <li>Help</li>
+            </ul>
+          </div>
+          <div class='col-md-4'>
+            <ul class='dist'>
+              <LH>More Bolt</LH>
+              <li>Gift Cards</li>
+              <li>Trailers</li>
+            </ul>
+          </div>
+          <div class='col-md-4'>
+            <ul class='dist'>
+              <lh>News</lh>
+              <li>Blog</li>
+              <li>Twitter</li>
+              <li>YouTube</li>
+              <li>Google+</li>
+              <li>Facebook</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-
   </body>
 </html>
