--- a/bass/index.html
+++ b/bass/index.html
@@ -15,8 +15,8 @@
             </div>
             <div class='pull-right'>
               <ul>
-                <li><a class='btn btn-default' href='#'>Features</a></li>
-                <li><a class='btn btn-default' href='#'>Download</a></li>
+                <li><a class='btn btn-default not-pressed' href='#'>Features</a></li>
+                <li><a class='btn btn-default press' href='#'>Download</a></li>
               </ul>
             </div>
           </div>
@@ -29,70 +29,82 @@
         </div>
       </div>
     </div>
-    <div class='main'>
-      <div class='container'>
-        <div class='row'>
+
+        <div class='main main-1 row gr'>
           <div class='col-md-6'>
-            <img src='' />
+            <img class='thumbnail'src='https://s3.amazonaws.com/codecademy-content/projects/bass/you.svg' />
           </div>
-          <div class='col-md-6'>
+          <div class='texty-text col-md-6'>
             <h3>Music Just for You</h3>
             <p>Listen to your favorite artists and albums, and make playlists of your favorite songs. Get recommendations based on your tastes to discover new music.</p>
           </div>
         </div>
-        <div class='row'>
-          <div class='col-md-6'>
+        <div class='main main-2 row'>
+          <div class='texty-text col-md-6'>
             <h3>Listen Everywhere</h3>
             <p>Take your music with you everywhere you go. Listen for free on any device - mobile, tablet, and your computer.</p>
           </div>
           <div class='col-md-6'>
-            <img src='' />
+            <img class='thumbnail' src='https://s3.amazonaws.com/codecademy-content/projects/bass/everywhere.svg' />
           </div>
         </div>
-        <div class='row'>
+        <div class='main main-3 row gr'>
           <div class='col-md-6'>
-            <img src='' />
+            <img class='thumbnail' src='https://s3.amazonaws.com/codecademy-content/projects/bass/connect.svg' />
           </div>
-          <div class='col-md-6'>
+          <div class='texty-text col-md-6'>
             <h3>Connect with Others</h3>
             <p>Find the right songs for the right occasions. Let your friends know what you're listening to, and connect with others who share the music you love.</p>
           </div>
         </div>
-      </div>
-    </div>
+
+
     <div class='support'>
       <div class='container'>
 	      <div class='row'>
           <h3>Try it now</h3>
         </div>
-        <!--Download on the app store-->
+        <div class='row'>
+          <img src='https://s3.amazonaws.com/codecademy-content/projects/bass/app-store.png' />
+          <img src='https://s3.amazonaws.com/codecademy-content/projects/bass/google-play.png' />
+        </div>
       </div>
     </div>
     <div class='footer'>
       <div class='container'>
-        <ul>
-          <lh>BASS</lh>
-          <li><a class='btn' href='#'>Install</a></li>
-          <li><a class='btn' href='#'>Mobile</a></li>
-        </ul>
-        <ul>
-          <lh>ABOUT</lh>
-          <li><a class='btn' href='#'>Blog</a></li>
-          <li><a class='btn' href='#'>Team</a></li>
-          <li><a class='btn' href='#'>Jobs</a></li>
-        </ul>
-        <ul>
-          <lh>SUPPORT</lh>
-          <li><a class='btn' href='#'>Help Center</a></li>
-          <li><a class='btn' href='#'>Get Started</a></li>
-          <li><a class='btn' href='#'>Contact Us</a></li>
-        </ul>
-        <ul>
-          <lh>COMMUNITY</lh>
-          <li><a class='btn' href='#'>Facebook</a></li>
-          <li><a class='btn' href='#'>Twitter</a></li>
-          <li><a class='btn' href='#'>Google+</a></li>
-        </ul>
+        <div class='row'>
+          <div class='col-md-2'>
+            <h4>BASS</h4>
+            <ul>
+              <li><a class='btn' href='#'>Install</a></li>
+              <li><a class='btn' href='#'>Mobile</a></li>
+            </ul>
+          </div>
+          <div class='col-md-2'>
+            <h4>ABOUT</h4>
+            <ul>
+              <li><a class='btn' href='#'>Blog</a></li>
+              <li><a class='btn' href='#'>Team</a></li>
+              <li><a class='btn' href='#'>Jobs</a></li>
+            </ul>
+          </div>
+          <div class='col-md-2'>
+            <h4>SUPPORT</h4>
+            <ul>
+              <li><a class='btn' href='#'>Help Center</a></li>
+              <li><a class='btn' href='#'>Get Started</a></li>
+              <li><a class='btn' href='#'>Contact Us</a></li>
+            </ul>
+          </div>
+          <div class='col-md-2'>
+						<h4>COMMUNITY</h4>
+            <ul>
+              <li><a class='btn' href='#'>Facebook</a></li>
+              <li><a class='btn' href='#'>Twitter</a></li>
+              <li><a class='btn' href='#'>Google+</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
