--- a/bolt/index.html
+++ b/bolt/index.html
@@ -12,10 +12,12 @@
           <div class='col-md-2'>
             <img class='logo' src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/logo.svg' />
           </div>
-          <ul class='pull-right'>
-            <li><a class='btn' href='#'>Log in</a></li>
-            <li><a class='btn' href='#'>Sign up</a></li>
-          </ul>
+          <div class='pull-right'>
+            <ul>
+              <li><a class='btn btn-default' href='#'>Log in</a></li>
+              <li><a class='btn btn-default' href='#'>Sign up</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -42,43 +44,62 @@
         <p>Choose from the latest titles, with new movies added everyday.</p>
         <div class='row'>
           <div class='col-md-8'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-avengers.jpg' />
+            <div class='thumbnail'>
+            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-avengers.jpg' />
+            </div>
           </div>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/harry-potter.jpg'>
+            <div class='thumbnail'>
+            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/harry-potter.jpg'>
+            </div>
           </div>
         </div>
         <div class='row'>
           <div class='col col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/frozen.jpg' />
+            <div class='thumbnail'>
+            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/frozen.jpg' />
+            </div>
           </div>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/iron-man.jpg' />
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/iron-man.jpg' />
+            </div>
           </div>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/transformers.jpg' />
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/transformers.jpg' />
+            </div>
           </div>
         </div>
         <div class='row'>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/lord-of-the-rings.jpg' />
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/lord-of-the-rings.jpg' />
+            </div>
           </div>
           <div class='col-md-8'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/skyfall.jpg' />
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/skyfall.jpg' />
+            </div>
           </div>
         </div>
         <div class='row'>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-dark-knight.jpg'/>
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-dark-knight.jpg'/>
+            </div>
           </div>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/pirates-of-the-caribbean.jpg' />
+            <div class='thumbnail'>
+              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/pirates-of-the-caribbean.jpg' />
+            </div>
           </div>
           <div class='col-md-4'>
-            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/toy-story-3.jpg' />
+            <div class='thumbnail'>
+	            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/toy-story-3.jpg' />
+            </div>
           </div>
         </div>
-          
       </div>
     </div>
 
