--- a/index.html
+++ b/index.html
@@ -1,141 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-    <div class='header'>
+    
+    <div class='jumbotron'>
+      <div class='header'>
+        <div class='container'>
+          <div class='row'>
+            <div class='col-md-2'>
+              <img class='logo' src='https://s3.amazonaws.com/codecademy-content/projects/bass/logo.svg' />
+            </div>
+            <div class='pull-right'>
+              <ul>
+                <li><a class='btn btn-default not-pressed' href='#'>Features</a></li>
+                <li><a class='btn btn-default press' href='#'>Download</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class='disp'>
+        <div class='container'>
+          <h1>Turn Up the Bass</h1>
+          <p>From the newest rekeases to classic albums, we have the best music for you to enjoy.</p>
+        </div>
+      </div>
+    </div>
+
+        <div class='main main-1 row gr'>
+          <div class='col-md-6'>
+            <img class='thumbnail'src='https://s3.amazonaws.com/codecademy-content/projects/bass/you.svg' />
+          </div>
+          <div class='texty-text col-md-6'>
+            <h3>Music Just for You</h3>
+            <p>Listen to your favorite artists and albums, and make playlists of your favorite songs. Get recommendations based on your tastes to discover new music.</p>
+          </div>
+        </div>
+        <div class='main main-2 row'>
+          <div class='texty-text col-md-6'>
+            <h3>Listen Everywhere</h3>
+            <p>Take your music with you everywhere you go. Listen for free on any device - mobile, tablet, and your computer.</p>
+          </div>
+          <div class='col-md-6'>
+            <img class='thumbnail' src='https://s3.amazonaws.com/codecademy-content/projects/bass/everywhere.svg' />
+          </div>
+        </div>
+        <div class='main main-3 row gr'>
+          <div class='col-md-6'>
+            <img class='thumbnail' src='https://s3.amazonaws.com/codecademy-content/projects/bass/connect.svg' />
+          </div>
+          <div class='texty-text col-md-6'>
+            <h3>Connect with Others</h3>
+            <p>Find the right songs for the right occasions. Let your friends know what you're listening to, and connect with others who share the music you love.</p>
+          </div>
+        </div>
+
+
+    <div class='support'>
+      <div class='container'>
+	      <div class='row'>
+          <h3>Try it now</h3>
+        </div>
+        <div class='row'>
+          <img src='https://s3.amazonaws.com/codecademy-content/projects/bass/app-store.png' />
+          <img src='https://s3.amazonaws.com/codecademy-content/projects/bass/google-play.png' />
+        </div>
+      </div>
+    </div>
+    <div class='footer'>
       <div class='container'>
         <div class='row'>
           <div class='col-md-2'>
-            <img class='logo' src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/logo.svg' />
-          </div>
-          <div class='pull-right'>
+            <h4>BASS</h4>
             <ul>
-              <li><a class='btn btn-default' href='#'>Log in</a></li>
-              <li><a class='btn btn-default' href='#'>Sign up</a></li>
+              <li><a class='btn' href='#'>Install</a></li>
+              <li><a class='btn' href='#'>Mobile</a></li>
             </ul>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="main">
-      <div class="container">
-        <div class='row'>
-          <h1>Watch your favorite movies, instantly.</h1>
-        </div>
-        <div class='row'>
-          <a class='btn'href='#'>Learn more</a>
-        </div>
-        <form class='form-inline'>
-          <div class='form-group'>
-            <input class='form-control browsing' type='text' placeholder='Browse the collection' id='browsing' size='50'>
-        	</div>
-	        <button type='submit' class='btn btn1'>Search</button>
-        </form>
-      </div>
-    </div>
-
-    <div class="supporting">
-      <div class="container">
-        <h2>A world of movies at your fingertips.</h2>
-        <p>Choose from the latest titles, with new movies added everyday.</p>
-        <div class='row'>
-          <div class='col-md-8'>
-            <div class='thumbnail'>
-            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-avengers.jpg' />
-            </div>
-          </div>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/harry-potter.jpg'>
-            </div>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col col-md-4'>
-            <div class='thumbnail'>
-            	<img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/frozen.jpg' />
-            </div>
-          </div>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/iron-man.jpg' />
-            </div>
-          </div>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/transformers.jpg' />
-            </div>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/lord-of-the-rings.jpg' />
-            </div>
-          </div>
-          <div class='col-md-8'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/skyfall.jpg' />
-            </div>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/the-dark-knight.jpg'/>
-            </div>
-          </div>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-              <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/pirates-of-the-caribbean.jpg' />
-            </div>
-          </div>
-          <div class='col-md-4'>
-            <div class='thumbnail'>
-	            <img src='https://s3.amazonaws.com/codecademy-content/projects/bolt-network/toy-story-3.jpg' />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="feature">
-      <div class="container">
-        <h2>Available everywhere</h2>
-        <p>Start watching on one device, and pick up where you left off on another device.</p>
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <div class='row pull-left'>
-          <div class='col-md-4'>
-            <ul class='dist'>
-              <lh>Bolt</lh>
-              <li>Careers</li>
-              <li>Terms</li>
-              <li>Help</li>
+          <div class='col-md-2'>
+            <h4>ABOUT</h4>
+            <ul>
+              <li><a class='btn' href='#'>Blog</a></li>
+              <li><a class='btn' href='#'>Team</a></li>
+              <li><a class='btn' href='#'>Jobs</a></li>
             </ul>
           </div>
-          <div class='col-md-4'>
-            <ul class='dist'>
-              <LH>More Bolt</LH>
-              <li>Gift Cards</li>
-              <li>Trailers</li>
+          <div class='col-md-2'>
+            <h4>SUPPORT</h4>
+            <ul>
+              <li><a class='btn' href='#'>Help Center</a></li>
+              <li><a class='btn' href='#'>Get Started</a></li>
+              <li><a class='btn' href='#'>Contact Us</a></li>
             </ul>
           </div>
-          <div class='col-md-4'>
-            <ul class='dist'>
-              <lh>News</lh>
-              <li>Blog</li>
-              <li>Twitter</li>
-              <li>YouTube</li>
-              <li>Google+</li>
-              <li>Facebook</li>
+          <div class='col-md-2'>
+						<h4>COMMUNITY</h4>
+            <ul>
+              <li><a class='btn' href='#'>Facebook</a></li>
+              <li><a class='btn' href='#'>Twitter</a></li>
+              <li><a class='btn' href='#'>Google+</a></li>
             </ul>
           </div>
         </div>
