--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class='disp'>
         <div class='container'>
           <h1>Turn Up the Bass</h1>
-          <p>From the newest rekeases to classic albums, we have the best music for you to enjoy.</p>
+          <p>From the newest releases to classic albums, we have the best music for you to enjoy.</p>
         </div>
       </div>
     </div>
