--- a/newsroom/index2.html
+++ b/newsroom/index2.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <!---
+    <!--- interesting
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search NewsRoom">
