--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class='container'>
         <ul class='nav nav-pills'>
           <li><a class='btn btn-default active' href='#'>Top Stories</a></li>
-          <li><a class='btn btn-default' href='#'>World Traveling</a></li>
+          <li><a class='btn btn-default' href='#'>World</a></li>
           <li><a class='btn btn-default' href='#'>Resume</a></li>
           <li><a class='btn btn-default' href='#'>Tech</a></li>
           <li><a class='btn btn-default' href='#'>Hobbies</a></li>
@@ -82,7 +82,7 @@
           </div>
           <div class='bottom row'>
             <h6>December 30th, 2015 - January 2nd, 2016</h6>
-            <a class='news-2' href='#'><h4><span class='underline-text'>Manny Comes to NYC</span></h4></a>
+            <a class='news-2' href='https://youtu.be/JMwi8vFXUpo?t=16s'><h4><span class='underline-text'>Manny Comes to NYC</span></h4></a>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
     
     <div class='support'>
       <div class='container'>
-        <a href='#'><img src='https://s3.amazonaws.com/codecademy-content/projects/newsroom/ad.jpg'/></a>
+        <a href='#'><img src='https://unsplash.com/photos/eW9H6Udi2Cw'/></a>
       </div>
     </div>
     
@@ -99,8 +99,8 @@
         <div class='pull-left'>
           <ul>
             <li><a class='btn btn-footer'href='#'>About</a></li>
-            <li><a class='btn btn-footer' href='#'>Terms</a></li>
-            <li><a class='btn btn-footer' href='#'>Send Feeback</a></li>
+            <li><a class='btn btn-footer' href='#'>Send Daps</a></li>
+            <li><a class='btn btn-footer' href='#'>Send Money</a></li>
           </ul>
         </div>
         <div class='pull-right'>
