--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     
     <div class='jumbotron'>
       <div class='container'>
-        <h6>November 7, 2014</h6>
-        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Bass</a></span></h1>
-        <p>A new app by the creators of Shutterbugg that lets you enjoy your favorite music everywhere you go.</p>
+        <h6>December 9, 2015</h6>
+        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thunder</a></span></h1>
+        <p>A new source for all the information on your favorite people.</p>
       </div>
     </div>
 
@@ -104,7 +104,7 @@
           </ul>
         </div>
         <div class='pull-right'>
-          <h6>C 2014 Newsroom</h6>
+          <h6>CGM</h6>
         </div>
       </div>
     </div>    
