--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class='logo' src="https://s3.amazonaws.com/codecademy-content/projects/newsroom/logo.svg">
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search NewsRoom' id='browse'>
+            <input type='text' placeholder='Search for Homies' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
