--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class='logo' src="https://s3.amazonaws.com/codecademy-content/projects/newsroom/logo.svg">
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search for Homies' id='browse'>
+            <input type='text' placeholder='Search Homies' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
@@ -37,7 +37,7 @@
       <div class='container'>
         <h6>December 9, 2015</h6>
         <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thunder</a></span></h1>
-        <p>A new source for all the information on your favorite people.</p>
+        <p>When you want to hear about what your friends are up to, listen for the shockwaves on Thunder.</p>
       </div>
     </div>
 
