--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class='container'>
         <h6>December 9, 2015</h6>
         <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thunder</a></span></h1>
-        <p>When you want to hear about what your friends are up to, listen for the shockwaves on Thunder.</p>
+        <p>You've graduated college, your friends have all gone in separate directions. You want to be there for the big moments. When you want to hear about what your friends are up to, listen for the shockwaves on Thunder.</p>
       </div>
     </div>
 
