--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <div class="header">
       <div class="container">
-        <img class='logo' src="https://s3.amazonaws.com/codecademy-content/projects/newsroom/logo.svg">
+        <img class='logo' src="https://pixabay.com/static/uploads/photo/2014/03/25/16/55/lightning-297607_960_720.png">
         <div class='search'>
           <form class='search-form'>
             <input type='text' placeholder='Search Homies' id='browse'>
