--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <div class="header">
       <div class="container">
-        <img class='logo' src="https://www.google.com/imgres?imgurl=http%3A%2F%2F1.bp.blogspot.com%2F-gjgA8MqmsNU%2FT3-wfd92q9I%2FAAAAAAAACVU%2FS4Gco9KFIUk%2Fs1600%2Frayo.png&imgrefurl=http%3A%2F%2Fquematucabeza.blogspot.com%2F2012%2F04%2F1sesiones-quematucabeza-prsentan.html&docid=RM1vkMqvxzsnyM&tbnid=zzsvZrSzmHzNkM%3A&w=620&h=737&ved=0ahUKEwi_1veasNDJAhWHqx4KHYYJBusQxiAICDAG&iact=c&ictx=1">
+        <img class='logo' src="https://pixabay.com/static/uploads/photo/2012/04/11/11/33/lightning-27588_960_720.png">
         <div class='search'>
           <form class='search-form'>
             <input type='text' placeholder='Search Homies' id='browse'>
