--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     
     <div class="header">
       <div class="container">
-        <img class='logo' src="https://www.google.com/imgres?imgurl=http%3A%2F%2F1.bp.blogspot.com%2F-gjgA8MqmsNU%2FT3-wfd92q9I%2FAAAAAAAACVU%2FS4Gco9KFIUk%2Fs1600%2Frayo.png&imgrefurl=http%3A%2F%2Fquematucabeza.blogspot.com%2F2012%2F04%2F1sesiones-quematucabeza-prsentan.html&docid=RM1vkMqvxzsnyM&tbnid=zzsvZrSzmHzNkM%3A&w=620&h=737&ved=0ahUKEwi_1veasNDJAhWHqx4KHYYJBusQxiAICDAG&iact=c&ictx=1">
+        <img class='logo' src="https://pixabay.com/static/uploads/photo/2014/03/25/16/55/lightning-297607_960_720.png">
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search Homies' id='browse'>
+            <input type='text' placeholder='Search NewsRoom' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
@@ -36,8 +36,8 @@
     <div class='jumbotron'>
       <div class='container'>
         <h6>December 9, 2015</h6>
-        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thunder</a></span></h1>
-        <p>You've graduated college, your friends have all gone in separate directions. You want to be there for the big moments. When you want to hear about what your friends are up to, listen for the shockwaves on Thunder.</p>
+        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Bass</a></span></h1>
+        <p>A new app by the creators of Shutterbugg that lets you enjoy your favorite music everywhere you go.</p>
       </div>
     </div>
 
@@ -49,19 +49,19 @@
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='https://youtu.be/PSKQ3ZNQ_O8?t=17s'><h4><span class='underline-text'>Petros puts up Christmas Tree</span></h4></a>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Petros puts up Christmas Tree</span></h4></a>
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon Smells the Farts</span></h4></a>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon Quoted for Fourth Time this week in WSJ</span></h4></a>
           </div>
           <div class='row'>
             <h6 class='date'>December 1st, 2015</h6>
             <a class='news-1' href='#'><h4><span class='underline-text'>Fax Starts his New Job</span></h4></a>
           </div>
           <div class='bottom row'>
-            <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon Smells the Farts</span></h4></a>
+            <h6 class='date'>November 26th, 2015</h6>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Thanksgiving</span></h4></a>
           </div>
         </div>
         <div class='col-md-4 bl'>
@@ -70,11 +70,11 @@
           </div>
           <div class='row'>
             <h6>December 19th-20th, 2015</h6>
-            <a class='news-2' href='#'><h4><span class='underline-text'>Fax Comes to Town</span></h4></a>
+            <a class='news-2' href='https://www.youtube.com/watch?v=hQo1HIcSVtg'><h4><span class='underline-text'>Fax Comes to Town</span></h4></a>
           </div>
           <div class='row'>
             <h6>December 20th, 2015</h6>
-            <a class='news-2' href='#'><h4><span class='underline-text'>Secret Santa</span></h4></a>
+            <a class='news-2' href='https://mail.google.com/mail/u/0/#inbox?compose=new'><h4><span class='underline-text'>Secret Santa - Enter Now</span></h4></a>
           </div>
           <div class='row'>
             <h6>December 31st, 2015</h6>
@@ -104,7 +104,7 @@
           </ul>
         </div>
         <div class='pull-right'>
-          <h6>CGM</h6>
+          <h6>C 2014 Newsroom</h6>
         </div>
       </div>
     </div>    
