--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div class='container'>
         <ul class='nav nav-pills'>
           <li><a class='btn btn-default active' href='#'>Top Stories</a></li>
-          <li><a class='btn btn-default' href='#'>World</a></li>
-          <li><a class='btn btn-default' href='#'>Resume</a></li>
-          <li><a class='btn btn-default' href='#'>Tech</a></li>
-          <li><a class='btn btn-default' href='#'>Hobbies</a></li>
+          <li><a class='btn btn-default' href='#'>Locate</a></li>
+          <li><a class='btn btn-default' href='#'>Plan MeetUp</a></li>
+          <li><a class='btn btn-default' href='#'>Headlines</a></li>
+          <li><a class='btn btn-default' href='#'>My Hobbies</a></li>
           <li><a class='btn btn-default' href='#'>Sports</a></li>
-          <li><a class='btn btn-default' href='#'>Science</a></li>
+          <li><a class='btn btn-default' href='#'>Intramurals</a></li>
           <li><a class='btn btn-default' href='#'>Health</a></li>
         </ul>
       </div>
@@ -36,8 +36,8 @@
     <div class='jumbotron'>
       <div class='container'>
         <h6>December 9, 2015</h6>
-        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Bass</a></span></h1>
-        <p>A new app by the creators of Shutterbugg that lets you enjoy your favorite music everywhere you go.</p>
+        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thundr</a></span></h1>
+        <p>You've graduated college and your frineds have moved away but you want to keep in touch for the big moments. Listen for the shockwave on Thundr.</p>
       </div>
     </div>
 
