--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <div class="header">
       <div class="container">
-        <img class='logo' src="https://pixabay.com/static/uploads/photo/2014/03/25/16/55/lightning-297607_960_720.png">
+        <img class='logo' src="http://www.boltstudios.com/images/bolt-white.png">
         <div class='search'>
           <form class='search-form'>
             <input type='text' placeholder='Search NewsRoom' id='browse'>
