--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class='logo' src="http://www.boltstudios.com/images/bolt-white.png">
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search NewsRoom' id='browse'>
+            <input type='text' placeholder='Search Thundr' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
