--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class='logo' src="http://www.boltstudios.com/images/bolt-white.png">
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search Thundr' id='browse'>
+            <input type='text' placeholder='Search Thundrr' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
@@ -36,8 +36,8 @@
     <div class='jumbotron'>
       <div class='container'>
         <h6>December 9, 2015</h6>
-        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thundr</a></span></h1>
-        <p>You've graduated college and your frineds have moved away but you want to keep in touch for the big moments. Listen for the shockwave on Thundr.</p>
+        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Thundrr</a></span></h1>
+        <p>You've graduated college and your frineds have moved away but you want to keep in touch for the big moments. Listen for the shockwave on Thundrr.</p>
       </div>
     </div>
 
@@ -99,12 +99,12 @@
         <div class='pull-left'>
           <ul>
             <li><a class='btn btn-footer'href='#'>About</a></li>
-            <li><a class='btn btn-footer' href='#'>Send Daps</a></li>
-            <li><a class='btn btn-footer' href='#'>Send Money</a></li>
+            <li><a class='btn btn-footer' href='#'>Contact</a></li>
+            <li><a class='btn btn-footer' href='#'>Info</a></li>
           </ul>
         </div>
         <div class='pull-right'>
-          <h6>C 2014 Newsroom</h6>
+          <h6>C 2015 Thundrr</h6>
         </div>
       </div>
     </div>    
