--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class='container'>
         <ul class='nav nav-pills'>
           <li><a class='btn btn-default active' href='#'>Top Stories</a></li>
-          <li><a class='btn btn-default' href='#'>Locate Friends</a></li>
-          <li><a class='btn btn-default' href='#'>Group MeetUp</a></li>
-          <li><a class='btn btn-default' href='#'>My Headlines</a></li>
-          <li><a class='btn btn-default' href='#'>My Hobbies</a></li>
-          <li><a class='btn btn-default' href='#'>My Sports</a></li>
+          <li><a class='btn btn-default' href='#'>Friends</a></li>
+          <li><a class='btn btn-default' href='#'>Plan MeetUp</a></li>
+          <li><a class='btn btn-default' href='#'>Headlines</a></li>
+          <li><a class='btn btn-default' href='#'>Hobbies</a></li>
+          <li><a class='btn btn-default' href='#'>Sports</a></li>
           <li><a class='btn btn-default' href='#'>Health Log</a></li>
         </ul>
       </div>
