--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
         <ul class='nav nav-pills'>
           <li><a class='btn btn-default active' href='#'>Top Stories</a></li>
           <li><a class='btn btn-default' href='#'>Friends</a></li>
-          <li><a class='btn btn-default' href='#'>Plan MeetUp</a></li>
-          <li><a class='btn btn-default' href='#'>Headlines</a></li>
+          <li><a class='btn btn-default' href='#'>MeetUps</a></li>
+          <li><a class='btn btn-default' href='#'>News</a></li>
           <li><a class='btn btn-default' href='#'>Hobbies</a></li>
-          <li><a class='btn btn-default' href='#'>Sports</a></li>
           <li><a class='btn btn-default' href='#'>Health Log</a></li>
         </ul>
       </div>
