--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
       <div class='container'>
         <ul class='nav nav-pills'>
           <li><a class='btn btn-default active' href='#'>Top Stories</a></li>
-          <li><a class='btn btn-default' href='#'>Friends</a></li>
-          <li><a class='btn btn-default' href='#'>MeetUps</a></li>
-          <li><a class='btn btn-default' href='#'>News</a></li>
-          <li><a class='btn btn-default' href='#'>Hobbies</a></li>
-          <li><a class='btn btn-default' href='#'>Health Log</a></li>
+          <li><a class='btn btn-default' href='#'>Profile</a></li>
+          <li><a class='btn btn-default' href='#'>Entrepreneur</a></li>
+          <li><a class='btn btn-default' href='#'>Projects</a></li>
+          <li><a class='btn btn-default' href='#'>Contact</a></li>
         </ul>
       </div>
     </div>
