--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body ng-app="AppMarketApp">
     <div class="header">
       <div class="container">
-        <h1>localVie</h1>
+        <h1>vidaLocal</h1>
       </div>
     </div>
 
