--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet" />
+<head>
+    <meta charset="utf-8" />
+    <title>HelloWorld</title>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-  </head>
-  <body ng-app="AppMarketApp">
-    <div class="header">
-      <div class="container">
-        <h1>vidaLocal</h1>
-      </div>
-    </div>
+    <!-- Load Sencha Touch -->
+    <link rel="stylesheet" href="../_libs/sencha/resources/css/sencha-touch.css" /> 
+    <script src="../_libs/sencha/sencha-touch-all-debug.js"></script>
 
-    <div class="main" ng-controller="MainController">
-      <div class="container">
-        <div class="card" ng-repeat="app in apps">
-          <app-info info="app"></app-info>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modules -->
-    <script src="js/app.js"></script>
-
-    <!-- Controllers -->
-    <script src="js/controllers/MainController.js"></script>
-
-    <!-- Directives -->
-    <script src='js/directives/appInfo.js'></script>
-
-
-  </body>
+    <!-- Load our code -->
+    <script src="app.js"></script> 
+</head>
+<body></body> 
 </html>
