--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>HelloWorld</title>
+    <title>Hello World</title>
 
     <!-- Load Sencha Touch -->
     <link rel="stylesheet" href="../_libs/sencha/resources/css/sencha-touch.css" /> 
@@ -11,5 +11,5 @@
     <!-- Load our code -->
     <script src="app.js"></script> 
 </head>
-<body><p>hey mundo</p></body> 
+<body></body> 
 </html>
