Init my webpage

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <!-- Load our code -->
     <script src="app.js"></script> 
 </head>
-<body></body> 
+<body>
+    <p>Hello, this is my webpage.</p>
+</body> 
 </html>
