--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+    <!--change this stylesheet to your own! -->
   <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
@@ -9,9 +10,10 @@
     <div class="header">
       <div class="container">
         <img class='logo' src="https://s3.amazonaws.com/codecademy-content/projects/newsroom/logo.svg">
+        <!-- change this logo to your own -->
         <div class='search'>
           <form class='search-form'>
-            <input type='text' placeholder='Search NewsRoom' id='browse'>
+            <input type='text' placeholder='Search The Manna Group' id='browse'>
             <button type='submit' class='search-btn'>Search</button>
           </form>
         </div>
@@ -36,8 +38,8 @@
     <div class='jumbotron'>
       <div class='container'>
         <h6>November 7, 2014</h6>
-        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>Bass</a></span></h1>
-        <p>A new app by the creators of Shutterbugg that lets you enjoy your favorite music everywhere you go.</p>
+        <h1><span class='underline-text-title'>Introducing <a class='title-1' href='#'>The Manna Group</a></span></h1>
+        <p>Setting up deliverables for The Manna Group</p>
       </div>
     </div>
 
@@ -91,6 +93,7 @@
     <div class='support'>
       <div class='container'>
         <a href='#'><img src='https://s3.amazonaws.com/codecademy-content/projects/newsroom/ad.jpg'/></a>
+        <!--change this to your own thing-->
       </div>
     </div>
     
@@ -104,7 +107,7 @@
           </ul>
         </div>
         <div class='pull-right'>
-          <h6>C 2014 Newsroom</h6>
+          <h6>C 2016 The Manna Group Holding Company</h6>
         </div>
       </div>
     </div>    
