--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='https://youtu.be/PSKQ3ZNQ_O8?t=17s'><h4><span class='underline-text'>Chris Farts in the Kitchen</span></h4></a>
+            <a class='news-1' href='https://youtu.be/PSKQ3ZNQ_O8?t=17s'><h4><span class='underline-text'>Chris in the Kitchen</span></h4></a>
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon Smells the Farts</span></h4></a>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon in the kitchen</span></h4></a>
           </div>
           <div class='row'>
             <h6 class='date'>December 1st, 2015</h6>
@@ -63,7 +63,7 @@
           </div>
           <div class='bottom row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='#'><h4><span class='underline-text'>Brandon Smells the Farts</span></h4></a>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Chris</span></h4></a>
           </div>
         </div>
         <div class='col-md-4 bl'>
