--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </ul>
         </div>
         <div class='pull-right'>
-          <h6>C 2016 TheMannaGroup Holding Company</h6>
+          <h6>C 2016 TheMannaGroup LLC</h6>
         </div>
       </div>
     </div>    
