--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class='row'>
             <h6>December 31st, 2015</h6>
-            <a class='news-2' href='https://www.youtube.com/watch?v=hQo1HIcSVtg'><h4><span class='underline-text'>New Years Eve Party</span></h4></a>
+            <a class='news-2' href='#'><h4><span class='underline-text'>New Years Eve Party</span></h4></a>
           </div>
           <div class='bottom row'>
             <h6>December 30th, 2015 - January 2nd, 2016</h6>
