--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
-            <a class='news-1' href='https://youtu.be/PSKQ3ZNQ_O8?t=17s'><h4><span class='underline-text'>Chris in the Kitchen</span></h4></a>
+            <a class='news-1' href='#'><h4><span class='underline-text'>Chris in the Kitchen</span></h4></a>
           </div>
           <div class='row'>
             <h6 class='date'>December 9th, 2015</h6>
